# prelegal_OpenAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.claude/skills/openai-llm/: SKILL.md
backend/: pyproject.toml
backend/app/: auth.py  chat.py  db.py  fields.py  generic_chat.py  llm.py  main.py  templates_catalog.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_fields.py  test_generic_chat.py
frontend/: Dockerfile  README.md  debug.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: layout.tsx  page.tsx
frontend/app/app/documents/: page.tsx
frontend/components/: AppHeader.tsx  Chat.tsx  DocumentChatLauncher.tsx  DraftDisclaimer.tsx  GenericChat.tsx  GenericDocumentCreator.tsx  GenericForm.tsx  GenericPreview.tsx  NdaCreator.tsx  NdaForm.tsx  NdaPreview.tsx  Spinner.tsx
frontend/lib/: documents.ts  genericDocument.ts  highlight.ts  mnda.ts  pdf.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
