[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Pre-Legal backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.50",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.uv]
package = false
